--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8">
-  <title></title>
+  <title>Unplugged Retreat</title>
   <meta name="description" content="">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
@@ -23,9 +23,67 @@
 </head>
 
 <body>
+<header>
+  <div>
+     <a href="#"><img src="img/unpluggedlogo copy.png" alt="unplugged logo"></a>
+     <div></div>
+     <nav>
+        <ul>
+            <li><a href="faq/index.html" target="_blank" rel="noopener">FAQ</a>;</li>
+            <li><a href="about/index.html" target="_blank" rel="noopener">About</a></li>
+        </ul>
+     </nav>
+  </div>
+</header>
 
-  <!-- Add your site or application content here -->
-  <p>Hello world! This is HTML5 Boilerplate.</p>
+<main>
+  <section class="hero-area">
+    <h1>Return from the desk, return refreshed.</h1>
+    <img src="img/unplugged-retreat.jpg " alt="woman on bridge looking into distant forest"></a>
+  </section>
+  <aside class="newsletter">
+    <h3>Want to join the next retreat?</h3>
+         <p>Find out when we are holding our next retreat and<br>how your company or team can sign up!</p>
+    <h3>Find out more</h3>
+       <div class="signup-form">
+        <!--email area-->
+        <!--download button-->
+
+        <input type="text" name="name" value="email address">
+        <input type="button" value="Download Itinerary">
+
+       </div>
+
+  </aside>
+</main> <!--main wrapper-->
+
+<footer>
+  <div class="content-wrapper">
+    <div class="footer-content">
+        <div class="conact">
+          <h4>Contact</h4>
+            <address>
+              555-555-5555<br>hello@unplugged.com 
+               </address>
+              <div class="social">
+                  <h4>Social</h4>
+            <p><a href="https://www.facebook.com/molly.josephson" target="_blank" rel="noopener"></a>
+               <a href="https://twitter.com/mojosephson" target="_blank" rel="noopener"></a>
+               <a href="https://www.instagram.com/queerantino_/" target="_blank" rel="noopener"></a>
+            </p>
+            <!-- other social links here -->
+            </div>
+        </div>
+    </div>
+</div> <!-- footer content ends --> 
+</div> <!--footer content-wrapper ends-->
+
+<div class="copyright"> 
+  <p><strong>Copyright 2023 | Unplugged</strong></p>
+</div> 
+</footer>
+
+
   <script src="js/vendor/modernizr-3.11.2.min.js"></script>
   <script src="js/plugins.js"></script>
   <script src="js/main.js"></script>
