--- a/index.html
+++ b/index.html
@@ -23,14 +23,16 @@
 </head>
 
 <body>
+
 <header>
-  <div>
-     <a href="#"><img src="img/unpluggedlogo copy.png" alt="unplugged logo"></a>
-     <div></div>
+  <div class="content-wrapper">
+     <a href="#">
+      <img src=" " alt="unplugged logo"></a>
+     <div class="header-divider"></div>
      <nav>
         <ul>
-            <li><a href="faq/index.html" target="_blank" rel="noopener">FAQ</a>;</li>
-            <li><a href="about/index.html" target="_blank" rel="noopener">About</a></li>
+            <li><a href="faq/index.html">FAQ</a></li>
+            <li><a href="about/index.html">About</a></li>
         </ul>
      </nav>
   </div>
@@ -38,24 +40,84 @@
 
 <main>
   <section class="hero-area">
-    <h1>Return from the desk, return refreshed.</h1>
-    <img src="img/unplugged-retreat.jpg " alt="woman on bridge looking into distant forest"></a>
+    <div class="content-wrapper">
+     <h1>Return from the desk, return refreshed.</h1>
+    </div>
   </section>
-  <aside class="newsletter">
+
+  <aside>
+    <div class="content-wrapper">
+    <div class="form-description">
     <h3>Want to join the next retreat?</h3>
-         <p>Find out when we are holding our next retreat and<br>how your company or team can sign up!</p>
-    <h3>Find out more</h3>
-       <div class="signup-form">
-        <!--email area-->
-        <!--download button-->
+         <p>Find out when we are holding our next retreat and how your company or team can sign up!</p>
+    </div>
+    <div class="form">
+      <h3>Find out more</h3>
 
         <input type="text" name="name" value="email address">
         <input type="button" value="Download Itinerary">
 
-       </div>
-
+    </div>
   </aside>
-</main> <!--main wrapper-->
+
+  <section class="features">
+     <div class="content-wrapper">
+         <h2>Have the work week you always dreamed of - without the bad wifi.</h2>
+     <div class="features-items"></div>
+      
+        <article>
+        <p class="tepee-icon">
+        </p>
+        <p class="features-item-description">Located in a peaceful bungalow outside of Lake Geneva, Wisconsin.</p>
+        </article>
+
+        <article>
+        <p class="bed-icon">
+        </p>
+        <p class="features-item-description">12 private rooms with ensuite bathrooms, 2 group meeting rooms, and 4 breakout rooms.</p>
+        </article>
+
+        <article>
+          <p class="utensils-icon">
+          </p>
+          <p class="features-item-description">Private chef team providing on demand meals - just like your team kitchen./p>
+          </article>
+
+          <article>
+            <p class="footprints-icon">
+            </p>
+            <p class="features-item-description">5 outdoor obstacle courses, including private beach 1/2 mile from bungalow.</p>
+          </article>
+
+            <article>
+              <p class="happyface-icon">
+              </p>
+              <p class="features-item-description">Retreat facilitator to manage your day to day activities so you all get a chance to rest.</p>
+            </article>
+
+              <article>
+                <p class="wifi-icon">
+                </p>
+                <p class="features-item-description">Dedicated computer room for times that you must wifi.</p>
+              </article>
+          </div>
+       </div>
+  </section>
+
+ <section class="reviews">
+  <div class="content-wrapper">
+    <h2>Be a better team in 5 days, like this one</h2>
+    
+        <article>
+          <div>
+           <h3>LaCrue Bottling Co. October 2018</h3>
+             <p>This team came to us with one goal in mind; reconnecting with their true values as a company and individually. After a long weekend full of breakou groups </p>
+          </div>
+        </article>
+    </div>
+ </section>
+
+</main> 
 
 <footer>
   <div class="content-wrapper">
@@ -63,14 +125,19 @@
         <div class="conact">
           <h4>Contact</h4>
             <address>
-              555-555-5555<br>hello@unplugged.com 
-               </address>
+              <p>
+                555-555-5555<br>
+                hello@unplugged.com 
+              </p>
+            </address>
               <div class="social">
                   <h4>Social</h4>
-            <p><a href="https://www.facebook.com/molly.josephson" target="_blank" rel="noopener"></a>
-               <a href="https://twitter.com/mojosephson" target="_blank" rel="noopener"></a>
-               <a href="https://www.instagram.com/queerantino_/" target="_blank" rel="noopener"></a>
-            </p>
+              <div class="social-icons">
+               <p><a href="https://www.facebook.com/molly.josephson" target="_blank"></a>
+               <a href="https://twitter.com/mojosephson" target="_blank"></a>
+               <a href="https://www.instagram.com/queerantino_/" target="_blank"></a>
+              </p>
+             </div>
             <!-- other social links here -->
             </div>
         </div>
