--- a/faq/index.html
+++ b/faq/index.html
@@ -24,8 +24,49 @@
 
 <body>
 
-  <!-- Add your site or application content here -->
-  <p>Hello world! This is HTML5 Boilerplate.</p>
+  <header>
+    <div>
+       <a href="#"><img src=" " alt="unplugged logo"></a>
+       <div></div>
+       <nav>
+          <ul>
+              <li><a href="faq/index.html" target="_blank" rel="noopener">FAQ</a>;</li>
+              <li><a href="about/index.html" target="_blank" rel="noopener">About</a></li>
+          </ul>
+       </nav>
+    </div>
+  </header>
+
+
+
+  <footer>
+    <div class="content-wrapper">
+      <div class="footer-content">
+          <div class="conact">
+            <h4>Contact</h4>
+              <address>
+                555-555-5555<br>hello@unplugged.com 
+                 </address>
+                <div class="social">
+                    <h4>Social</h4>
+              <p><a href="https://www.facebook.com/molly.josephson" target="_blank" rel="noopener"></a>
+                 <a href="https://twitter.com/mojosephson" target="_blank" rel="noopener"></a>
+                 <a href="https://www.instagram.com/queerantino_/" target="_blank" rel="noopener"></a>
+              </p>
+              <!-- other social links here -->
+              </div>
+          </div>
+      </div>
+  </div> <!-- footer content ends --> 
+  </div> <!--footer content-wrapper ends-->
+  
+  <div class="copyright"> 
+    <p><strong>Copyright 2023 | Unplugged</strong></p>
+  </div> 
+  </footer>
+
+
+
   <script src="../js/vendor/modernizr-3.11.2.min.js"></script>
   <script src="../js/plugins.js"></script>
   <script src="../js/main.js"></script>
