--- a/about/index.html
+++ b/about/index.html
@@ -22,11 +22,100 @@
   <meta name="theme-color" content="#fafafa">
 </head>
 
-<body>
 
-  <!-- Add your site or application content here -->
-  <p>Hello world! This is HTML5 Boilerplate.</p>
-  <script src="../js/vendor/modernizr-3.11.2.min.js"></script>
+<body>
+  <header>
+    <div class="content-wrapper">
+       <a href="#">
+        <img src=" " alt="unplugged logo"></a>
+       <div class="header-divider"></div>
+       <nav>
+          <ul>
+              <li><a href="../faq/index.html">FAQ</a></li>
+              <li><a href="../index.html">Homepage</a></li>
+          </ul>
+       </nav>
+    </div>
+  </header>
+
+  <main>
+    <section class="mission">
+      <div class="content-wrapper">
+        <h2>Our Mission - we want to make you the team you always wanted to be.</h2>
+        <div class="mission-content">
+           <p>What do you imagine when you think about having the best team for your company? What are their strengths? Maybe you imagine your workers being friends outside of work who then bring a familiarity to the office environment that helps everyone be transparent and communicate efficently</p>
+           <p>Whatever your ideal team looks like we can help you find the tools to foster a great work environment and dynamic that everyone will love.</p>
+        </div>
+      </div> <!-- mission content wrapper ends-->
+    </section>
+
+    <section class="map">
+      <figure>
+        <!--google map placement-->
+      </figure>
+    </section>
+
+    <section class="contact-section">
+      <div class="content-wrapper">
+        <h2>Contact is, because you all need this.</h2>
+        <div class="contact-content">
+            <h4>General information</h4>
+            <address>
+              <p>333 Main St. Lake Geneva, WI 53147<br>
+                555-555-5555<br>
+                hello@unplugged.com</p>
+            </address>
+        </div>
+        <div>
+          <h4>Chat with a Facilitator</h4>
+            <address>
+             <p>555-555-5556<br>
+             facilitator@unplugged.com</p>
+            </address>
+        </div>
+       <!-- contact-content div ends -->
+      </div>
+       <!-- contact content wrapper ends -->
+    </section>
+  </main>
+  <!--main content ends-->
+
+
+
+<footer>
+  <div class="content-wrapper">
+    <div class="footer-content">
+        <div class="conact">
+          <h4>Contact</h4>
+            <address>
+              <p>
+                555-555-5555<br>
+                hello@unplugged.com 
+              </p>
+            </address>
+              <div class="social">
+                  <h4>Social</h4>
+              <div class="social-icons">
+               <p><a href="https://www.facebook.com/molly.josephson" target="_blank"></a>
+               <a href="https://twitter.com/mojosephson" target="_blank"></a>
+               <a href="https://www.instagram.com/queerantino_/" target="_blank"></a>
+              </p>
+             </div>
+            <!-- other social links here -->
+            </div>
+        </div>
+    </div>
+</div> <!-- footer content ends --> 
+</div> <!--footer content-wrapper ends-->
+
+<div class="copyright"> 
+  <p><strong>Copyright 2023 | Unplugged</strong></p>
+</div> 
+</footer>
+
+
+
+<script src="../js/vendor/modernizr-3.11.2.min.js"></script>
   <script src="../js/plugins.js"></script>
   <script src="../js/main.js"></script>
 
