Added faq content

--- a/faq/index.html
+++ b/faq/index.html
@@ -30,13 +30,40 @@
        <div></div>
        <nav>
           <ul>
-              <li><a href="faq/index.html" target="_blank" rel="noopener">FAQ</a>;</li>
-              <li><a href="about/index.html" target="_blank" rel="noopener">About</a></li>
+              <li><a href="index.html">FAQ</a>;</li>
+              <li><a href="../about/index.html">About</a></li>
           </ul>
        </nav>
     </div>
   </header>
-
+<main>
+  <section class="questions">
+    <div class="content-wrapper">
+    <h2>Frequently Asked Questions</h2>
+       <div class="questions-content">
+         <div>
+          <h4>How do I get to the Unplugged retreat?</h4>
+          <p>We provide transportation shuttles from the airport directly to the retreat.</p>
+         </div>
+         <div>
+          <h4>What kind of team is right for the Unplugged retreat?</h4>
+          <p>Any team looking to gorw and reach new heights is a perfect fit for this retreat.</p>
+         </div>
+         <div>
+          <h4>What size teams can you accomodate?</h4>
+          <p>2 acres of open land, we can have up to 40 people attend each retreat session.</p>
+         </div>
+         <div>
+          <h4>Is there really no wifi available?</h4>
+          <p>Nope! But that's why you're here. There are two rotary phones for emergencies and one television from the 1950s in our main dining hall.</p>
+         </div>
+       </div>
+       <!--questions-content ends-->
+    </div>
+    <!--content wrapper ends-->
+  </section>
+</main>
+ <!--main content ends-->
 
 
   <footer>
@@ -45,7 +72,9 @@
           <div class="conact">
             <h4>Contact</h4>
               <address>
+                <p>
                 555-555-5555<br>hello@unplugged.com 
+                </p>
                  </address>
                 <div class="social">
                     <h4>Social</h4>
