--- a/index.html
+++ b/index.html
@@ -66,37 +66,37 @@
      <div class="features-items"></div>
       
         <article>
-        <p class="tepee-icon">
+        <p class="features-icon">
         </p>
         <p class="features-item-description">Located in a peaceful bungalow outside of Lake Geneva, Wisconsin.</p>
         </article>
 
         <article>
-        <p class="bed-icon">
+        <p class="features-icon">
         </p>
         <p class="features-item-description">12 private rooms with ensuite bathrooms, 2 group meeting rooms, and 4 breakout rooms.</p>
         </article>
 
         <article>
-          <p class="utensils-icon">
+          <p class="features-icon">
           </p>
           <p class="features-item-description">Private chef team providing on demand meals - just like your team kitchen./p>
           </article>
 
           <article>
-            <p class="footprints-icon">
+            <p class="features-icon">
             </p>
             <p class="features-item-description">5 outdoor obstacle courses, including private beach 1/2 mile from bungalow.</p>
           </article>
 
             <article>
-              <p class="happyface-icon">
+              <p class="features-icon">
               </p>
               <p class="features-item-description">Retreat facilitator to manage your day to day activities so you all get a chance to rest.</p>
             </article>
 
               <article>
-                <p class="wifi-icon">
+                <p class="features-icon">
                 </p>
                 <p class="features-item-description">Dedicated computer room for times that you must wifi.</p>
               </article>
@@ -122,7 +122,7 @@
 <footer>
   <div class="content-wrapper">
     <div class="footer-content">
-        <div class="conact">
+        <div class="contact">
           <h4>Contact</h4>
             <address>
               <p>
