Modified class name

--- a/faq/index.html
+++ b/faq/index.html
@@ -37,10 +37,10 @@
     </div>
   </header>
 <main>
-  <section class="questions">
+  <section class="faq">
     <div class="content-wrapper">
     <h2>Frequently Asked Questions</h2>
-       <div class="questions-content">
+       <div class="faq-content">
          <div>
           <h4>How do I get to the Unplugged retreat?</h4>
           <p>We provide transportation shuttles from the airport directly to the retreat.</p>
