Fixed spelling error

--- a/index.html
+++ b/index.html
@@ -20,6 +20,10 @@
   <link rel="stylesheet" href="css/main.css">
 
   <meta name="theme-color" content="#fafafa">
+
+  <!-- Google Fonts -->
+  <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,700|Poppins:500,700" rel="stylesheet">
+
 </head>
 
 <body>
@@ -41,7 +45,7 @@
 <main>
   <section class="hero-area">
     <div class="content-wrapper">
-     <h1>Return from the desk, return refreshed.</h1>
+     <h1>Retreat from the desk, return refreshed.</h1>
     </div>
   </section>
 
