--- a/faq/index.html
+++ b/faq/index.html
@@ -20,6 +20,10 @@
   <link rel="stylesheet" href="../css/main.css">
 
   <meta name="theme-color" content="#fafafa">
+
+  <!-- Google Fonts -->
+  <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,700|Poppins:500,700" rel="stylesheet">
+
 </head>
 
 <body>
@@ -30,7 +34,7 @@
        <div></div>
        <nav>
           <ul>
-              <li><a href="index.html">FAQ</a>;</li>
+              <li><a href="index.html">FAQ</a></li>
               <li><a href="../about/index.html">About</a></li>
           </ul>
        </nav>
