Modified styles for responsive images

--- a/index.html
+++ b/index.html
@@ -30,8 +30,11 @@
 
 <header>
   <div class="content-wrapper">
-     <a href="#">
-      <img src=" " alt="unplugged logo"></a>
+      <figure>
+          <a href="">
+              <img src="img/unpluggedlogo copy.png" alt="Unplugged logo">
+          </a>
+      </figure>
      <div class="header-divider"></div>
      <nav>
         <ul>
@@ -44,9 +47,9 @@
 
 <main>
   <section class="hero-area">
-    <div class="content-wrapper">
-     <h1>Retreat from the desk, return refreshed.</h1>
-    </div>
+      <div class="content-wrapper">
+         <h1>Retreat from the desk, return refreshed.</h1>
+      </div>
   </section>
 
   <aside>
@@ -65,10 +68,9 @@
   </aside>
 
   <section class="features">
-     <div class="content-wrapper">
+    <div class="content-wrapper">
          <h2>Have the work week you always dreamed of - without the bad wifi.</h2>
      <div class="features-items"></div>
-      
         <article>
         <p class="features-icon">
         </p>
@@ -111,12 +113,16 @@
  <section class="reviews">
   <div class="content-wrapper">
     <h2>Be a better team in 5 days, like this one</h2>
-    
         <article>
-          <div>
-           <h3>LaCrue Bottling Co. October 2018</h3>
+          <figure>
+            <a href=" ">
+             <img src="img/unplugged-retreat-lacrue.jpg" alt="La Crue Bottling Co. group at the retreat">
+            </a>
+         </figure>
+            <div>
+             <h3>LaCrue Bottling Co. October 2018</h3>
              <p>This team came to us with one goal in mind; reconnecting with their true values as a company and individually. After a long weekend full of breakou groups </p>
-          </div>
+            </div>
         </article>
     </div>
  </section>
