Google map on About page

--- a/about/index.html
+++ b/about/index.html
@@ -20,6 +20,10 @@
   <link rel="stylesheet" href="../css/main.css">
 
   <meta name="theme-color" content="#fafafa">
+
+  <!-- Google Fonts -->
+  <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,700|Poppins:500,700" rel="stylesheet">
+
 </head>
 
 
@@ -51,13 +55,13 @@
 
     <section class="map">
       <figure>
-        <!--google map placement-->
+        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3290.577121604819!2d-119.25740368843935!3d34.437495172901755!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x80e9a5402a92121f%3A0xce0053c469487f4f!2sOjai%20Valley%20Inn!5e0!3m2!1sen!2sus!4v1693099035087!5m2!1sen!2sus" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
       </figure>
     </section>
 
     <section class="contact-section">
       <div class="content-wrapper">
-        <h2>Contact is, because you all need this.</h2>
+        <h2>Contact us, because you all need this.</h2>
         <div class="contact-content">
             <h4>General information</h4>
             <address>
