--- a/faq/index.html
+++ b/faq/index.html
@@ -18,6 +18,7 @@
 
   <link rel="stylesheet" href="../css/normalize.css">
   <link rel="stylesheet" href="../css/main.css">
+  <script src="https://kit.fontawesome.com/dc6772f2d9.js" crossorigin="anonymous"></script>
 
   <meta name="theme-color" content="#fafafa">
 
