--- a/about/index.html
+++ b/about/index.html
@@ -101,11 +101,13 @@
               <div class="social">
                   <h4>Social</h4>
               <div class="social-icons">
-               <p><a href="https://www.facebook.com/molly.josephson" target="_blank"></a>
-               <a href="https://twitter.com/mojosephson" target="_blank"></a>
-               <a href="https://www.instagram.com/queerantino_/" target="_blank"></a>
-              </p>
-             </div>
+                  <div class="social-icons">
+                    <p>
+                      <a href="https://www.facebook.com/molly.josephson"><i class="fab fa-facebook-f"></i></a>
+                      <a href="https://twitter.com/mojosephson"><i class="fab fa-twitter"></i></a>
+                      <a href="https://www.instagram.com/queerantino_/"><i class= "fab fa-instagram"></i></a>
+                   </p>
+                 </div>
             <!-- other social links here -->
             </div>
         </div>
