Added social icons

--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
                   <h4>Social</h4>
               <div class="social-icons">
                <p>
-                  <a href="https://www.facebook.com/molly.josephson"><i class="fab fa-facebook-f fa-xl"></i></a>
+                  <a href="https://www.facebook.com/molly.josephson"><i class="fab fa-facebook-f"></i></a>
                   <a href="https://twitter.com/mojosephson"><i class="fab fa-twitter"></i></a>
                   <a href="https://www.instagram.com/queerantino_/"><i class= "fab fa-instagram"></i></a>
               </p>
@@ -164,7 +164,7 @@
 </div> <!--footer content-wrapper ends-->
 
 <div class="copyright"> 
-  <p><strong>Copyright 2023 | Unplugged</strong></p>
+  <p><strong>Copyright 202X | Unplugged</strong></p>
 </div> 
 </footer>
 
