--- a/faq/index.html
+++ b/faq/index.html
@@ -83,11 +83,13 @@
                  </address>
                 <div class="social">
                     <h4>Social</h4>
-              <p><a href="https://www.facebook.com/molly.josephson" target="_blank" rel="noopener"></a>
-                 <a href="https://twitter.com/mojosephson" target="_blank" rel="noopener"></a>
-                 <a href="https://www.instagram.com/queerantino_/" target="_blank" rel="noopener"></a>
-              </p>
-              <!-- other social links here -->
+                   <div class="social-icons">
+                      <p>
+                         <a href="https://www.facebook.com/molly.josephson"><i class="fab fa-facebook-f"></i></a>
+                         <a href="https://twitter.com/mojosephson"><i class="fab fa-twitter"></i></a>
+                         <a href="https://www.instagram.com/queerantino_/"><i class= "fab fa-instagram"></i></a>
+                     </p>
+                   </div>
               </div>
           </div>
       </div>
