Removed extra brakcets

--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
   <section class="features">
     <div class="content-wrapper">
          <h2>Have the work week you always dreamed of - without the bad wifi.</h2>
-     <div class="features-items"></div>
+     <div class="features-items">
         <article>
         <p class="features-icon">
             <i class="fas fa-campground"></i>
@@ -155,18 +155,18 @@
                   <a href="https://twitter.com/mojosephson"><i class="fab fa-twitter"></i></a>
                   <a href="https://www.instagram.com/queerantino_/"><i class= "fab fa-instagram"></i></a>
               </p>
+              <div class="copyright"> 
+                <p><strong>Copyright 202X | Unplugged</strong></p>
+              </div> 
              </div>
-            <!-- other social links here -->
             </div>
         </div>
     </div>
 </div> <!-- footer content ends --> 
-</div> <!--footer content-wrapper ends-->
-
-<div class="copyright"> 
-  <p><strong>Copyright 202X | Unplugged</strong></p>
-</div> 
 </footer>
+
+
+
 
 
   <script src="js/vendor/modernizr-3.11.2.min.js"></script>
