Reformatted faq-content

--- a/faq/index.html
+++ b/faq/index.html
@@ -28,45 +28,44 @@
 </head>
 
 <body>
-
   <header>
-    <div>
-       <a href="#"><img src=" " alt="unplugged logo"></a>
-       <div></div>
+    <div class="content-wrapper">
+        <figure>
+            <a href="">
+                <img src="../img/unpluggedlogo copy.png" alt="Unplugged logo">
+            </a>
+        </figure>
+       <div class="header-divider"></div>
        <nav>
           <ul>
-              <li><a href="index.html">FAQ</a></li>
-              <li><a href="../about/index.html">About</a></li>
+              <li><a href="faq/index.html">FAQ</a></li>
+              <li><a href="about/index.html">About</a></li>
           </ul>
        </nav>
     </div>
-  </header>
-<main>
-  <section class="faq">
+  </header>  
+
+<main class="faq">
     <div class="content-wrapper">
     <h2>Frequently Asked Questions</h2>
        <div class="faq-content">
-         <div>
           <h4>How do I get to the Unplugged retreat?</h4>
           <p>We provide transportation shuttles from the airport directly to the retreat.</p>
-         </div>
-         <div>
+        </div>
+       <div class="faq-content">
           <h4>What kind of team is right for the Unplugged retreat?</h4>
           <p>Any team looking to gorw and reach new heights is a perfect fit for this retreat.</p>
-         </div>
-         <div>
+        </div>
+       <div class="faq-content">
           <h4>What size teams can you accomodate?</h4>
           <p>2 acres of open land, we can have up to 40 people attend each retreat session.</p>
-         </div>
-         <div>
+        </div>
+        <div class="faq-content">
           <h4>Is there really no wifi available?</h4>
           <p>Nope! But that's why you're here. There are two rotary phones for emergencies and one television from the 1950s in our main dining hall.</p>
-         </div>
-       </div>
-       <!--questions-content ends-->
+        </div><!--questions-content ends-->
     </div>
     <!--content wrapper ends-->
-  </section>
 </main>
  <!--main content ends-->
 
@@ -89,16 +88,15 @@
                          <a href="https://twitter.com/mojosephson"><i class="fab fa-twitter"></i></a>
                          <a href="https://www.instagram.com/queerantino_/"><i class= "fab fa-instagram"></i></a>
                      </p>
+                    <div class="copyright"> 
+                     <p><strong>Copyright 2023 | Unplugged</strong></p>
+                    </div> 
                    </div>
               </div>
           </div>
       </div>
   </div> <!-- footer content ends --> 
   </div> <!--footer content-wrapper ends-->
-  
-  <div class="copyright"> 
-    <p><strong>Copyright 2023 | Unplugged</strong></p>
-  </div> 
   </footer>
 
 
