--- a/faq/index.html
+++ b/faq/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8">
-  <title></title>
+  <title>FAQ | Unplugged</title>
   <meta name="description" content="">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
@@ -96,7 +96,6 @@
           </div>
       </div>
   </div> <!-- footer content ends --> 
-  </div> <!--footer content-wrapper ends-->
   </footer>
 
 
