Finished mobile styles

--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
          </figure>
             <div>
              <h3>LaCrue Bottling Co. October 2018</h3>
-             <p>This team came to us with one goal in mind; reconnecting with their true values as a company and individually. After a long weekend full of breakou groups </p>
+             <p>This team came to us with one goal in mind; reconnecting with their true values as a company and individually. After a long weekend full of breakou groups this team accomplished exactly what they set out to do!</p>
             </div>
         </article>
     </div>
@@ -155,18 +155,15 @@
                   <a href="https://twitter.com/mojosephson"><i class="fab fa-twitter"></i></a>
                   <a href="https://www.instagram.com/queerantino_/"><i class= "fab fa-instagram"></i></a>
               </p>
-              <div class="copyright"> 
-                <p><strong>Copyright 202X | Unplugged</strong></p>
-              </div> 
              </div>
             </div>
         </div>
     </div>
-</div> <!-- footer content ends --> 
+</div>
+<div class="copyright"> 
+  <p><strong>Copyright 202X | Unplugged</strong></p>
+</div> 
 </footer>
-
-
-
 
 
   <script src="js/vendor/modernizr-3.11.2.min.js"></script>
