Finished mobile styles for faq

--- a/faq/index.html
+++ b/faq/index.html
@@ -28,6 +28,7 @@
 </head>
 
 <body>
+  
   <header>
     <div class="content-wrapper">
         <figure>
@@ -39,7 +40,7 @@
        <nav>
           <ul>
               <li><a href="faq/index.html">FAQ</a></li>
-              <li><a href="about/index.html">About</a></li>
+              <li><a href="../about/index.html">About</a></li>
           </ul>
        </nav>
     </div>
@@ -70,33 +71,34 @@
  <!--main content ends-->
 
 
-  <footer>
-    <div class="content-wrapper">
-      <div class="footer-content">
-          <div class="conact">
-            <h4>Contact</h4>
-              <address>
-                <p>
-                555-555-5555<br>hello@unplugged.com 
-                </p>
-                 </address>
-                <div class="social">
-                    <h4>Social</h4>
-                   <div class="social-icons">
-                      <p>
-                         <a href="https://www.facebook.com/molly.josephson"><i class="fab fa-facebook-f"></i></a>
-                         <a href="https://twitter.com/mojosephson"><i class="fab fa-twitter"></i></a>
-                         <a href="https://www.instagram.com/queerantino_/"><i class= "fab fa-instagram"></i></a>
-                     </p>
-                    <div class="copyright"> 
-                     <p><strong>Copyright 2023 | Unplugged</strong></p>
-                    </div> 
-                   </div>
-              </div>
-          </div>
-      </div>
-  </div> <!-- footer content ends --> 
-  </footer>
+ <footer>
+  <div class="content-wrapper">
+    <div class="footer-content">
+        <div class="contact">
+          <h4>Contact</h4>
+            <address>
+              <p>
+                555-555-5555<br>
+                hello@unplugged.com 
+              </p>
+            </address>
+              <div class="social">
+                  <h4>Social</h4>
+              <div class="social-icons">
+               <p>
+                  <a href="https://www.facebook.com/molly.josephson"><i class="fab fa-facebook-f"></i></a>
+                  <a href="https://twitter.com/mojosephson"><i class="fab fa-twitter"></i></a>
+                  <a href="https://www.instagram.com/queerantino_/"><i class= "fab fa-instagram"></i></a>
+              </p>
+             </div>
+            </div>
+        </div>
+    </div>
+</div>
+<div class="copyright"> 
+  <p><strong>Copyright 202X | Unplugged</strong></p>
+</div> 
+</footer>
 
 
 
