Finished mobile styles for about page

--- a/about/index.html
+++ b/about/index.html
@@ -29,19 +29,23 @@
 
 
 <body>
+
   <header>
     <div class="content-wrapper">
-       <a href="#">
-        <img src=" " alt="unplugged logo"></a>
+        <figure>
+            <a href="">
+                <img src="../img/unpluggedlogo copy.png" alt="Unplugged logo">
+            </a>
+        </figure>
        <div class="header-divider"></div>
        <nav>
           <ul>
               <li><a href="../faq/index.html">FAQ</a></li>
-              <li><a href="index.html">About</a></li>
+              <li><a href="../about/index.html">About</a></li>
           </ul>
        </nav>
     </div>
-  </header>
+  </header>  
 
   <main>
     <section class="mission">
@@ -85,40 +89,34 @@
   </main>
   <!--main content ends-->
 
-
-
-<footer>
-  <div class="content-wrapper">
-    <div class="footer-content">
-        <div class="conact">
-          <h4>Contact</h4>
-            <address>
-              <p>
-                555-555-5555<br>
-                hello@unplugged.com 
-              </p>
-            </address>
-              <div class="social">
-                  <h4>Social</h4>
-              <div class="social-icons">
-                  <div class="social-icons">
-                    <p>
-                      <a href="https://www.facebook.com/molly.josephson"><i class="fab fa-facebook-f"></i></a>
-                      <a href="https://twitter.com/mojosephson"><i class="fab fa-twitter"></i></a>
-                      <a href="https://www.instagram.com/queerantino_/"><i class= "fab fa-instagram"></i></a>
-                   </p>
-                 </div>
-            <!-- other social links here -->
-            </div>
-        </div>
-    </div>
-</div> <!-- footer content ends --> 
-</div> <!--footer content-wrapper ends-->
-
-<div class="copyright"> 
-  <p><strong>Copyright 2023 | Unplugged</strong></p>
-</div> 
-</footer>
+  <footer>
+    <div class="content-wrapper">
+      <div class="footer-content">
+          <div class="contact">
+            <h4>Contact</h4>
+              <address>
+                <p>
+                  555-555-5555<br>
+                  hello@unplugged.com 
+                </p>
+              </address>
+                <div class="social">
+                    <h4>Social</h4>
+                <div class="social-icons">
+                 <p>
+                    <a href="https://www.facebook.com/molly.josephson"><i class="fab fa-facebook-f"></i></a>
+                    <a href="https://twitter.com/mojosephson"><i class="fab fa-twitter"></i></a>
+                    <a href="https://www.instagram.com/queerantino_/"><i class= "fab fa-instagram"></i></a>
+                </p>
+               </div>
+              </div>
+          </div>
+      </div>
+  </div>
+  <div class="copyright"> 
+    <p><strong>Copyright 202X | Unplugged</strong></p>
+  </div> 
+  </footer>
 
 
 
