Fixed footer for tablet size

--- a/index.html
+++ b/index.html
@@ -147,9 +147,10 @@
                 hello@unplugged.com 
               </p>
             </address>
-              <div class="social">
+            </div>
+         <div class="social">
                   <h4>Social</h4>
-              <div class="social-icons">
+        <div class="social-icons">
                <p>
                   <a href="https://www.facebook.com/molly.josephson"><i class="fab fa-facebook-f"></i></a>
                   <a href="https://twitter.com/mojosephson"><i class="fab fa-twitter"></i></a>
