Fixed contact content area tablet size

--- a/about/index.html
+++ b/about/index.html
@@ -68,24 +68,24 @@
       <div class="content-wrapper">
         <h2>Contact us, because you all need this.</h2>
         <div class="contact-content">
+          <div>
             <h4>General information</h4>
             <address>
               <p>333 Main St. Lake Geneva, WI 53147<br>
                 555-555-5555<br>
                 hello@unplugged.com</p>
             </address>
-        </div>
+          </div>
         <div>
           <h4>Chat with a Facilitator</h4>
              <p>555-555-5556<br>
              facilitator@unplugged.com</p>
-        </div>
-       <!-- contact-content div ends -->
-      </div>
-       <!-- contact content wrapper ends -->
+         </div>
+        </div><!-- contact-content div ends -->
+      </div><!-- contact content wrapper ends -->
     </section>
   </main>
-  <!--main content ends-->
+  
 
   <footer>
     <div class="content-wrapper">
@@ -98,9 +98,10 @@
                   hello@unplugged.com 
                 </p>
               </address>
-                <div class="social">
+              </div>
+           <div class="social">
                     <h4>Social</h4>
-                <div class="social-icons">
+          <div class="social-icons">
                  <p>
                     <a href="https://www.facebook.com/molly.josephson"><i class="fab fa-facebook-f"></i></a>
                     <a href="https://twitter.com/mojosephson"><i class="fab fa-twitter"></i></a>
