--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 <header>
   <div class="content-wrapper">
       <figure>
-          <a href="">
+          <a href="#">
               <img src="img/unpluggedlogo copy.png" alt="Unplugged logo">
           </a>
       </figure>
@@ -149,7 +149,7 @@
             </address>
             </div>
          <div class="social">
-                  <h4>Social</h4>
+              <h4>Social</h4>
         <div class="social-icons">
                <p>
                   <a href="https://www.facebook.com/molly.josephson"><i class="fab fa-facebook-f"></i></a>
