Linked logo back to homepage

--- a/about/index.html
+++ b/about/index.html
@@ -33,7 +33,7 @@
   <header>
     <div class="content-wrapper">
         <figure>
-            <a href="">
+            <a href="../index.html">
                 <img src="../img/unpluggedlogo copy.png" alt="Unplugged logo">
             </a>
         </figure>
