Linked logo from faq back to homepage

--- a/faq/index.html
+++ b/faq/index.html
@@ -32,7 +32,7 @@
   <header>
     <div class="content-wrapper">
         <figure>
-            <a href="">
+            <a href="../index.html">
                 <img src="../img/unpluggedlogo copy.png" alt="Unplugged logo">
             </a>
         </figure>
@@ -82,9 +82,10 @@
                 hello@unplugged.com 
               </p>
             </address>
-              <div class="social">
+            </div>
+         <div class="social">
                   <h4>Social</h4>
-              <div class="social-icons">
+        <div class="social-icons">
                <p>
                   <a href="https://www.facebook.com/molly.josephson"><i class="fab fa-facebook-f"></i></a>
                   <a href="https://twitter.com/mojosephson"><i class="fab fa-twitter"></i></a>
@@ -99,8 +100,6 @@
   <p><strong>Copyright 202X | Unplugged</strong></p>
 </div> 
 </footer>
-
-
 
   <script src="../js/vendor/modernizr-3.11.2.min.js"></script>
   <script src="../js/plugins.js"></script>
