--- a/about/index.html
+++ b/about/index.html
@@ -52,7 +52,7 @@
       <div class="content-wrapper">
         <h2>Our Mission - we want to make you the team you always wanted to be.</h2>
         <div class="mission-content">
-           <p>What do you imagine when you think about having the best team for your company? What are their strengths? Maybe you imagine your workers being friends outside of work who then bring a familiarity to the office environment that helps everyone be transparent and communicate efficently</p>
+           <p>What do you imagine when you think about having the best team for your company? What are their strengths? Maybe you imagine your workers being friends outside of work, who then bring a familiarity to the office environment that helps everyone be transparent and communicate efficently.</p>
            <p>Whatever your ideal team looks like we can help you find the tools to foster a great work environment and dynamic that everyone will love.</p>
         </div>
       </div> <!-- mission content wrapper ends-->
