--- a/about/index.html
+++ b/about/index.html
@@ -60,7 +60,7 @@
 
     <section class="map">
       <figure>
-        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3290.577121604819!2d-119.25740368843935!3d34.437495172901755!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x80e9a5402a92121f%3A0xce0053c469487f4f!2sOjai%20Valley%20Inn!5e0!3m2!1sen!2sus!4v1693099035087!5m2!1sen!2sus" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d5873.722884052143!2d-88.42456516303015!3d42.600683182304174!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x88058beaba2a015f%3A0x4b28e3671bb3e0e9!2s333%20Main%20St%2C%20Lake%20Geneva%2C%20WI%2053147!5e0!3m2!1sen!2sus!4v1698634526982!5m2!1sen!2sus" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
       </figure>
     </section>
 
