Fixed copy and faq link

--- a/faq/index.html
+++ b/faq/index.html
@@ -39,7 +39,7 @@
        <div class="header-divider"></div>
        <nav>
           <ul>
-              <li><a href="faq/index.html">FAQ</a></li>
+              <li><a href="../faq/index.html">FAQ</a></li>
               <li><a href="../about/index.html">About</a></li>
           </ul>
        </nav>
@@ -55,7 +55,7 @@
         </div>
        <div class="faq-content">
           <h4>What kind of team is right for the Unplugged retreat?</h4>
-          <p>Any team looking to gorw and reach new heights is a perfect fit for this retreat.</p>
+          <p>Any team looking to grow and reach new heights is a perfect fit for this retreat.</p>
         </div>
        <div class="faq-content">
           <h4>What size teams can you accomodate?</h4>
@@ -63,7 +63,7 @@
         </div>
         <div class="faq-content">
           <h4>Is there really no wifi available?</h4>
-          <p>Nope! But that's why you're here. There are two rotary phones for emergencies and one television from the 1950s in our main dining hall.</p>
+          <p>You can access the internet via our ethernet cable, but because of our remote location wifi is spotty. We have rotary phones for emergencies.</p>
         </div><!--questions-content ends-->
     </div>
     <!--content wrapper ends-->
