--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
           <p class="features-icon">
             <i class="fas fa-utensils"></i>
           </p>
-          <p class="features-item-description">Private chef team providing on demand meals - just like your team kitchen.</p>
+          <p class="features-item-description">Private chef team providing on demand meals - just like your own kitchen.</p>
           </article>
 
           <article>
@@ -111,7 +111,7 @@
                 <p class="features-icon">
                   <i class="fas fa-wifi"></i>
                 </p>
-                <p class="features-item-description">Dedicated computer room for times that you must wifi.</p>
+                <p class="features-item-description">Dedicated computer room for times that you must check emails.</p>
               </article>
           </div>
        </div>
@@ -128,7 +128,7 @@
          </figure>
             <div>
              <h3>LaCrue Bottling Co. October 2018</h3>
-             <p>This team came to us with one goal in mind; reconnecting with their true values as a company and individually. After a long weekend full of breakou groups this team accomplished exactly what they set out to do!</p>
+             <p>This team came to us with one goal in mind; reconnecting with their true values as a company and individually. After a long weekend full of breakout groups this team accomplished exactly what they set out to do!</p>
             </div>
         </article>
     </div>
